--- a/AndoridApp/app/src/main/res/values/strings.xml
+++ b/AndoridApp/app/src/main/res/values/strings.xml
@@ -48,4 +48,13 @@
     <string name="action_settings">Settings</string>
     <string name="user_profile">Profile</string>
     <string name="logout">Logout</string>
+    <string name="JoinTrip">Join Trip</string>
+    <string name="numOfSeats">number Of Seats</string>
+    <string name="TimeTrip">Time Trip</string>
+    <string name="destinationTrip">To</string>
+    <string name="SourceTrip">From</string>
+    <string name="TripName">TripName</string>
+    <string name="driverdetails">Driver Details</string>
+
+
 </resources>
