--- a/AndoridApp/app/src/main/res/values/strings.xml
+++ b/AndoridApp/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="SourceTrip">From</string>
     <string name="TripName">TripName</string>
     <string name="driverdetails">Driver Details</string>
+    <string name="cost">trip coast</string>
 
 
 </resources>
