--- a/AndoridApp/app/src/main/res/values/strings.xml
+++ b/AndoridApp/app/src/main/res/values/strings.xml
@@ -55,6 +55,10 @@
     <string name="SourceTrip">From</string>
     <string name="TripName">TripName</string>
     <string name="driverdetails">Driver Details</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="Search">Search</string>
+
 
 
 </resources>
